--- a/乱七八糟.md
+++ b/乱七八糟.md
@@ -29,3 +29,6 @@
 - PX4是由苏黎世联邦理工学院的计算机视觉与几何实验室的一个软硬件项目PIXHAWK演变而来，有＂开源飞控之王＂之称，目的在于为学术、爱好和工业团体提供一款低成本高性能的高端的自驾仪，PX4是专业的自动驾驶仪。它由来自工业界和学术界的世界级开发人员开发，并得到活跃的全球社区的支持，为各种载具提供支持。集群，控制，路径规划,结合ROS做无人机SLAM建图导航等.PX4 是一个飞控系统，负责：接收外部定位信息（比如 GPS、SLAM 结果）计算姿态、速度控制发送控制信号给电机，保持无人机稳定，执行任务（航点飞行、定点悬停、避障等）
 - <img width="753" height="517" alt="图片" src="https://github.com/user-attachments/assets/01816e50-2cd7-4118-8b28-39f1fd29120f" />
 
+
+解决方案：解决在安装Ubuntu22.04后准备安装ros2，sudo apt update后报错：由于没有公钥，无法验证下列签名： NO_PUBKEY F42ED6FBAB17C654
+sudo curl -sSL https://raw.githubusercontent.com/ros/rosdistro/master/ros.key -o /usr/share/keyrings/ros-archive-keyring.gpg
